--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,32 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TimeViewActivity">
+        <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+
+        <activity android:name=".MainViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".FunctionalityViewActivity"
+            android:parentActivityName=".MainViewActivity"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainViewActivity" />
+        </activity>
+        <activity
+            android:name=".TimeViewActivity"
+            android:parentActivityName=".MainViewActivity"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainViewActivity" />
+        </activity>
+
     </application>
 
 </manifest>
