--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
     compile 'com.github.Stoyicker:AligningRecyclerView:v1.0'
+    compile 'com.uber.sdk:rides-android:0.5.2'
 }
